# zettl

./: Cargo.toml  default.nix  flake.nix  readme.md
nix/: default.nix  hm.nix  zettl.nix
src/: cli.rs  commands.rs  config.rs  main.rs  utils.rs
