[package]
name = "zettl"
version = "0.1.0"
authors = ["Tirth Jain <jaintirth24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
heck = "0.3.2"
ignore = "0.4.17"
regex = "1.4.6"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
serde_yaml = "0.8.17"
structopt = "0.3.21"
subprocess = "0.2.6"
dirs-next = "2.0.0"
