[package]
name = "zettl"
version = "0.1.0"
authors = ["Tirth Jain <jaintirth24@gmail.com>"]
edition = "2018"
repository = "https://github.com/hedonhermdev/zettl"
homepage = "https://github.com/hedonhermdev/zettl"
description = "A blazing-fast notetaking system"
readme = "README.md"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-recursion = "0.3.2"
chrono = "0.4.19"
dirs = "3.0.2"
futures = "0.3.14"
heck = "0.3.2"
ignore = "0.4.17"
regex = "1.4.6"
serde = {version = "1.0.125", features = ["derive", "rc"]}
serde_json = "1.0.64"
serde_yaml = "0.8.17"
structopt = "0.3.21"
subprocess = "0.2.6"
tokio = {version = "1", features = ["full"]}
